# eterra-polkadot-sdk-solochain-template

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
chain-specs/: testnet-plain.json  testnet-raw.json  testnet.alice.json  testnet.json  testnet.no-boot.json
docker/: README.md  entrypoint.sh
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs
pallets/eterra-game-authority/: Cargo.toml
pallets/eterra-game-authority/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
