[package]
name = "pallet-eterra-game-authority"
description = "Authority pallet for administrating Eterra games"
authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
version.workspace    = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate / FRAME (wasm)
frame-support      = { workspace = true, default-features = false }
frame-system       = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true, default-features = false, features = ["derive", "max-encoded-len"] }
scale-info         = { workspace = true, default-features = false, features = ["derive"] }
sp-std             = { workspace = true, default-features = false }
sp-runtime         = { workspace = true, default-features = false }
sp-io              = { workspace = true, default-features = false }
sp-core            = { workspace = true, default-features = false }

[dev-dependencies]
# Used by tests / mock runtime
sp-core = { workspace = true }
sp-io   = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-std/std",
  "sp-runtime/std",
  "sp-io/std",
  "sp-core/std",
]
# Optional: enable try-runtime hooks when building with `--features try-runtime`
try-runtime = ["frame-support/try-runtime"]
